feat: working on the drawing picture api and handling drawing by tenant and user